# pgi

./: .gitignore  Cargo.toml  README.adoc  flake.nix
assets/: structures.json
documentation/: devlog.typ  final-design-doc.typ  hldd.typ  software-design.typ
pgi-display/: Cargo.toml
pgi-display/assets/: structures.json
pgi-display/src/: apriltag.rs  lib.rs  main.rs  rendering.rs  structures.rs  webcam.rs
pgi-display/src/input/: mod.rs  runtime.rs
src/: rendering.rs  structures.rs  webcam.rs
src/input/: launch.rs  mod.rs  runtime.rs
