[package]
name = "pgi-display"
version = "0.1.0"
edition = "2021"
description = "A Physicalized Game Interface Display"

[dependencies]
apriltag = "0.4.0"
apriltag-image = "0.1.0"
bevy = { version = "0.14.0", features = ["wayland"] }
clap = { version = "4.5.15", features = ["derive"] }
image = "0.24.5"
nokhwa = { version = "0.10.4", features = ["input-native", "output-threaded"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
serde = { version = "1.0.210", features = ["serde_derive"] }
bevy_common_assets = { version = "0.11.0", features = ["json"] }

[patch.crates-io]
# patch nokhwa core until https://github.com/l1npengtul/nokhwa/pull/178 is merged and released
nokhwa-core = { git = "https://github.com/l1npengtul/nokhwa.git", rev = "74a98ace10368320cfcc2186118ae10d5308ca59"}
# patch nokhwa linux bindings until new release fixes https://github.com/l1npengtul/nokhwa/issues/147
nokhwa-bindings-linux = { git = "https://github.com/l1npengtul/nokhwa.git", rev = "74a98ace10368320cfcc2186118ae10d5308ca59"}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
